Save the display string during rotations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_world">Internet Carlos Ray Database</string>
     <string name="action_settings">Settings</string>
     <string name="get_joke">Get Joke</string>
-    <string name="first_name">Hans</string>
-    <string name="last_name">Dockter</string>
+    <string name="first_name">Guillaume</string>
+    <string name="last_name">Laforge</string>
 
 </resources>
