--- a/app/src/debug/res/values/strings.xml
+++ b/app/src/debug/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_world">Internet Carlos Ray Database</string>
     <string name="action_settings">Settings</string>
     <string name="get_joke">Get Joke</string>
-    <string name="first_name">Nate</string>
-    <string name="last_name">Schutta</string>
+    <string name="first_name">Lisa</string>
+    <string name="last_name">Robbins</string>
 
 </resources>
