--- a/app/src/debug/res/values/strings.xml
+++ b/app/src/debug/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_world">Internet Carlos Ray Database</string>
     <string name="action_settings">Settings</string>
     <string name="get_joke">Get Joke</string>
-    <string name="first_name" translatable="false">Tim</string>
-    <string name="last_name" translatable="false">O\'Reilly</string>
+    <string name="first_name" translatable="false">Xav</string>
+    <string name="last_name" translatable="false">Ducrohet</string>
 
 </resources>
