--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,8 @@
     <string name="hello_world">Internet Carlos Ray Database</string>
     <string name="action_settings">Settings</string>
     <string name="get_joke">Get Joke</string>
-    <string name="first_name" translatable="false">Xavier</string>
-    <string name="last_name" translatable="false">Ducrohet</string>
+    <string name="first_name" translatable="false">Hans</string>
+    <string name="last_name" translatable="false">Dockter</string>
 
     <string name="title_activity_settings">SettingsActivity</string>
     <string name="settings">Settings</string>
