--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="title_activity_settings">SettingsActivity</string>
     <string name="settings">Settings</string>
     <string name="action_share">Share</string>
+    <string name="get_other_joke">Get Other Joke</string>
 
 </resources>
